@@ -1,3 +1,15 @@
+2003-06-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	Changes for compiling with w32api
+
+	* ntoskrnl/include/internal/i386/ps.h (KPCR_TSS): Redefine as 0x3C.
+	(KPCR_TIB): New structure.
+	(IKPCR): Ditto.
+	(KPCR): Match w32api structure fieldnames.
+	* ntoskrnl/ke/main.c (ExpInitializeExecutive): Adjust for changes to KPCR.
+	* ntoskrnl/ke/i386/kernel.c: Ditto.
+	* ntoskrnl/ps/thread.c: Ditto.
+
 2003-06-01  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	Changes for compiling with w32api
